--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -51,7 +51,7 @@
     		<li class="toggle"><a href="javascript:void(0)"><i class="las la-bars la-2x"></i></a></li>
     	</ul>
     </nav>
-    <header><img src="assets/img/cover/cover-chi-siamo.jpeg" alt="Ca' Vecchia Beerstrot Location"/></header>
+    <header><img src="assets/img/cover/cover-chi-siamo.jpg" alt="Ca' Vecchia Beerstrot Location"/></header>
     <div class="panel-home-n">
     	<div class="grid-container">
     		<div class="grid-x grid-margin-x grid-margin-y">
