--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     							<li class="splide__slide"><img src="assets/img/prod/VegetarianoFagioli_rettangolare.jpg" alt="Vegetariano Fagioli"></li>
     							<li class="splide__slide"><img src="assets/img/prod/BeerstrotDOPPIO_rettangolare.jpg" alt="Beerstrot Doppio"></li>
     							<li class="splide__slide"><img src="assets/img/prod/PolloDOPPIO_rettangolare.jpg" alt="Pollo"></li>
-    							<li class="splide__slide"><img src="assets/img/cover/cover-menu-hamburgers.jpeg" alt="Hamburger"></li>
+    							<li class="splide__slide"><img src="assets/img/cover/cover-menu.jpg" alt="Hamburger"></li>
     							<li class="splide__slide"><img src="assets/img/prod/PulledPork_rettangolare.jpg" alt="Pulled Pork"></li>
     							<li class="splide__slide"><img src="assets/img/prod/AlettediPolloPiccanti_rettangolare.jpg" alt="Alette di Pollo Piccanti"></li>
     							<li class="splide__slide"><img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg" alt="Peperoncini Piccanti"></li>
