--- a/index.html
+++ b/index.html
@@ -114,12 +114,7 @@
     				<section id="fotoMenu" class="splide extra-space-image-tab-home" aria-label="Immagini menù di Ca' Vecchia Beerstrot">
     					<div class="splide__track">
     						<ul class="splide__list grid-margin-y">
-    							<!-- <li class="splide__slide"><img src="assets/img/slider/RollGamberoSalmone.jpg" alt="Roll Gambero e Salmone"></li> -->
     							<li class="splide__slide"><img src="assets/img/slider/HamburgerNorma.jpg" alt="Hamburger Norma"></li>
-    							<!-- <li class="splide__slide"><img src="assets/img/slider/NigiriSalmone.jpg" alt="Nigiri Salmone"></li> -->
-    							<!-- <li class="splide__slide"><img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" alt="Hosomaki Special Salmon"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/RollGamberoeSalmone_rettangolare.jpg" alt="Roll Gambero Salmone"></li>
-    							<li class="splide__slide"><img src="assets/img/prod/RollMandorle_rettangolare.jpg" alt="Roll Mandorle"></li> -->
     							<li class="splide__slide"><img src="assets/img/prod/Diablo_rettangolare.jpg" alt="Diablo"></li>
     							<li class="splide__slide"><img src="assets/img/prod/VegetarianoFagioli_rettangolare.jpg" alt="Vegetariano Fagioli"></li>
     							<li class="splide__slide"><img src="assets/img/prod/BeerstrotDOPPIO_rettangolare.jpg" alt="Beerstrot Doppio"></li>
@@ -231,7 +226,7 @@
     					<div class="splide__track">
     						<ul class="splide__list">
     							<li class="splide__slide" controls data-splide-html-video="assets/img/video/chi-siamo.mp4">
-            						<img src="assets/img/cover/cover-chi-siamo.jpeg">
+            						<img src="assets/img/cover/cover-chi-siamo.jpg">
           						</li>
           						<li class="splide__slide"><img src="assets/img/location/aia-drone.jpg"></li>
           						<li class="splide__slide"><img src="assets/img/location/esterno-vista-filottrano.jpg"></li>
@@ -307,19 +302,6 @@
             </form>
         </div>
         <!-- fine modal reset password -->
-    
-        <!--  <div class="grid-x grid-padding-x grid-margin-y">
-            <div class="small-12 cell">
-                <h5 class="text-center subheader">oppure</h5>
-            </div>
-        </div> -->
-        <!-- <div class="grid-x grid-padding-x grid-padding-y">
-            <div class="small-12 cell">
-                <button type="button" class="button">Accedi con Facebook</button>
-                <button type="button" class="button alert">Accedi con Google</button>
-            </div>
-        </div> -->
-    
         <form autocomplete="on">
             <div class="grid-x grid-padding-x extra-space">
                 <div class="small-12 cell">
