--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           						<li class="splide__slide"><img src="assets/img/location/aia-drone.jpg"></li>
           						<li class="splide__slide"><img src="assets/img/location/esterno-vista-filottrano.jpg"></li>
           						<li class="splide__slide"><img src="assets/img/slider/CaVecchiaEstivo.jpg"></li>
-    							<li class="splide__slide"><img src="assets/img/cover/cover-chi-siamo.jpeg"></li>
+    							<li class="splide__slide"><img src="assets/img/cover/cover-chi-siamo.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/location/insegna.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/location/interno.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/location/sala.jpg"></li>
