--- a/asporto.html
+++ b/asporto.html
@@ -109,7 +109,7 @@
     				<!-- <li><a href="#pesce">Pesce</a></li> -->
     				<li><a href="#stuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
-    				<li><a href="#carne">Carni</a></li>
+    				<li><a href="#carne">Carne</a></li>
     				<li><a href="#dolce">Dolci</a></li>
     				<li><a href="#bevanda">Bevande</a></li>
     				<li><a href="#birra">Birra</a></li>
