--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
     				<!-- <li><a href="#pesce">Pesce</a></li> -->
     				<li><a href="#perStuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
-    				<li><a href="#carne">Carni</a></li>
+    				<li><a href="#carne">Carne</a></li>
     				<li><a href="#dolce">Dolci</a></li>
     				<li><a href="#bevanda">Bevande</a></li>
     				<li><a href="#caffe">Caffè</a></li>
