--- a/asporto.html
+++ b/asporto.html
@@ -56,10 +56,11 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
+                <p>Chiusi il lunedì e martedì.</p>
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell">
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" hidden>
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-center extra-space">
     			    <div class="cell">
@@ -102,7 +103,7 @@
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;">
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" hidden>
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
@@ -119,7 +120,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container">
+    	<div class="grid-container" hidden>
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<!-- <section class="grid-x grid-margin-x grid-margin-y" id="pesce" data-magellan-target="pesce">
@@ -338,19 +339,6 @@
             </form>
         </div>
         <!-- fine modal reset password -->
-    
-        <!--  <div class="grid-x grid-padding-x grid-margin-y">
-            <div class="small-12 cell">
-                <h5 class="text-center subheader">oppure</h5>
-            </div>
-        </div> -->
-        <!-- <div class="grid-x grid-padding-x grid-padding-y">
-            <div class="small-12 cell">
-                <button type="button" class="button">Accedi con Facebook</button>
-                <button type="button" class="button alert">Accedi con Google</button>
-            </div>
-        </div> -->
-    
         <form autocomplete="on">
             <div class="grid-x grid-padding-x extra-space">
                 <div class="small-12 cell">
