--- a/asporto.html
+++ b/asporto.html
@@ -120,7 +120,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" hidden>
+    	<div class="grid-container" >
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<!-- <section class="grid-x grid-margin-x grid-margin-y" id="pesce" data-magellan-target="pesce">
