--- a/menu.html
+++ b/menu.html
@@ -81,81 +81,6 @@
     </div>
     <div id="menupage-text">
     	<div class="grid-container">
-    		<!-- <section class="grid-x grid-margin-x grid-margin-y" id="pesce" data-magellan-target="pesce">
-    			<div class="small-12 cell">
-    				<h2>Pesce - Antipasti</h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/CodediGamberoBarbate_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Code di Gambero Barbate">
-    								<h3>Code di Gambero Barbate<span class="price ">11</span></h3>
-    								<p>Code di gambero barbate avvolte in lardo di cinta e grigliate. Servito con vellutata di zucca alla menta.<span class=""><br><small>Allergeni: Crostacei</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/CarpacciodiSalmoneAffumicato_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Carpaccio di Salmone Affumicato">
-    								<h3>Carpaccio di Salmone Affumicato<span class="price ">13</span></h3>
-    								<p>Carpaccio di salmone affumicato agli agrumi. Servito con salsa di yogurt.<span class=""><br><small>Allergeni: Pesce, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/PolpoCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Polpo Croccante">
-    								<h3>Polpo Croccante<span class="price ">13</span></h3>
-    								<p>Polpo croccante servito con crema di patate e pesto di olive.<span class=""><br><small>Allergeni: Pesce</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="small-12 cell">
-    				<h2>Pesce - Secondi</h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/FritturadiMare_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Frittura di Mare">
-    								<h3>Frittura di Mare<span class="price ">19</span></h3>
-    								<p>Frittura di gamberi e calamari.<span class=""><br><small>Allergeni: Pesce, Crostacei</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/SalmoneinCrosta_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Salmone in Crosta">
-    								<h3>Salmone in Crosta<span class="price ">18</span></h3>
-    								<p>Trancio di salmone in crosta di mandorle e pistacchi. Servito con marmellata di cipolle rosse.<span class=""><br><small>Allergeni: Pesce</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/SpiedinidiPesce_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Spiedini di Pesce">
-    								<h3>Spiedini di Pesce<span class="price ">21</span></h3>
-    								<p>Spiedini arrosto con branzino, gamberi, calamari e coda di rospo.<span class=""><br><small>Allergeni: Pesce, Crostacei</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/CodadiRospo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Coda di Rospo">
-    								<h3>Coda di Rospo<span class="price ">19</span></h3>
-    								<p>Coda di rospo al finocchietto e guanciale. Servita con purea di ceci.<span class=""><br><small>Allergeni: Pesce</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-    		</section> -->
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
@@ -262,7 +187,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/CheeseburgerSpecial_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cheeseburger Special">
     								<h3>Cheeseburger Special<span class="price ">12,9</span></h3>
-    								<p>Burger di manzo (180 grammi), cheddar, cipolle rosse in agrodolce, insalata croccante, salsa speciale.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), cheddar, cipolle rosse in agrodolce, insalata croccante, salsa burger.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -271,7 +196,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/CheeseburgerSpecial_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cheeseburger Special Doppio">
     								<h3>Cheeseburger Special Doppio<span class="price ">16,9</span></h3>
-    								<p>Doppio burger di manzo (360 grammi), cheddar, cipolle rosse in agrodolce, insalata croccante, salsa speciale.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), cheddar, cipolle rosse in agrodolce, insalata croccante, salsa burger.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
