--- a/menu.html
+++ b/menu.html
@@ -413,6 +413,15 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Whoop_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Whoop">
+                                    <h3>Whoop<span class="price ">5,5</span></h3>
+                                    <p>Tre biscotti al cioccolato ripieni di delicata crema al burro di arachidi.<span class=""><br><small>Allergeni: Glutine, Latte, Uova, Arachidi</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     				</div>
     			</div>
     		</section>
