--- a/menu.html
+++ b/menu.html
@@ -569,14 +569,14 @@
     			<div class="small-12 cell">
     				<h2>Birra Artigianale in Bottiglia</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hell 50cl<span class="price ">6</span></h3>
     								<p class="">Birrificio Mönchshof. Bionda tedesca non amara 4,9%. Birra corposa con una luppolatura eccezionalmente fine, perfetta per ogni occasione.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
