--- a/menu.html
+++ b/menu.html
@@ -567,98 +567,130 @@
     				</div>
     			</div>
     			<div class="small-12 cell">
-    				<h2>Birra Artigianale in Bottiglia</h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Hell 50cl<span class="price ">6</span></h3>
-    								<p class="">Birrificio Mönchshof. Bionda tedesca non amara 4,9%. Birra corposa con una luppolatura eccezionalmente fine, perfetta per ogni occasione.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Weisse 50cl<span class="price ">4,5</span></h3>
-    								<p class="">Birrificio Franziskaner. Weisse tedesca 5,1%. Bionda con prevalenti note di banana.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Natural Radler 50cl<span class="price ">6</span></h3>
-    								<p class="">Birrificio Mönchshof. Radler 2,5%. Rinfrescante e fruttata con succo di limone naturale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Forst Zero 33cl<span class="price ">4,5</span></h3>
-    								<p class="">Birrificio Forst. Zero alcohol dal sapore sorprendente.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Zona Mugnetti 50cl<span class="price ">6,5</span></h3>
-    								<p class="">Birrificio Mukkeller. Belgian Ale 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Bockbier 50cl<span class="price ">6,5</span></h3>
-    								<p class="">Birrificio Mönchshof. Rossa tedesca 6,9%. Birra corposa, si fa apprezzare grazie al suo bouquet leggermente maltato, alla sua schiuma cremosa e al suo gusto speziato e aromatico.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Tulio 50cl<span class="price ">6,5</span></h3>
-    								<p class="">Rye IPA 6,5%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Mazzu de Fiuri 50cl<span class="price ">6,5</span></h3>
-    								<p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Variante IPA 50cl<span class="price ">6,5</span></h3>
-    								<p class="">Birrificio Mukkeller. IPA 6,6%. Birra con un buon corpo, succosa con un amaro deciso. In bocca frutta gialla matura, agrumi e frutta tropicale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Hattori Hanzo 50cl<span class="price ">6,5</span></h3>
-    								<p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Calix Niger 33cl<span class="price ">6</span></h3>
-    								<p class="">Birrificio dei Castelli. Stout 6,7%. Color ebano scuro, schiuma compatta dai toni nocciola. Al naso elegante sentore di caffè e note di quercia.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
+                    <h2>Birra Artigianale in Bottiglia</h2>
+                    <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Hell 50cl<span class="price ">6</span></h3>
+                                    <p class="">Birrificio Mönchshof. Bionda tedesca non amara 4,9%. Birra corposa con una luppolatura eccezionalmente fine, perfetta per ogni occasione.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Pilsner 50cl<span class="price ">6</span></h3>
+                                    <p class="">Birrificio Flensburger. Bionda tedesca amara 4,8%.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Weisse 50cl<span class="price ">4,5</span></h3>
+                                    <p class="">Birrificio Franziskaner. Weisse tedesca 5,1%. Bionda con prevalenti note di banana.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Blanche 33cl<span class="price ">5,5</span></h3>
+                                    <p class="">Birrificio Cornelissen. Birra bianca belga 5%. birra di frumento bianca non filtrata.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Natural Radler 50cl<span class="price ">6</span></h3>
+                                    <p class="">Birrificio Mönchshof. Radler 2,5%. Rinfrescante e fruttata con succo di limone naturale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Forst Zero 33cl<span class="price ">4,5</span></h3>
+                                    <p class="">Birrificio Forst. Zero alcohol dal sapore sorprendente.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Zona Mugnetti 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mukkeller. Belgian Ale 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Bockbier 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mönchshof. Rossa tedesca 6,9%. Birra corposa, si fa apprezzare grazie al suo bouquet leggermente maltato, alla sua schiuma cremosa e al suo gusto speziato e aromatico.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Red Ale 50cl<span class="price ">6</span></h3>
+                                    <p class="">Birrificio Brewmaster. Rossa irlandese 4,2%. Tratti molto decisi di malto e luppolo con un finale caramellato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Tulio 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Rye IPA 6,5%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Mazzu de Fiuri 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Variante IPA 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mukkeller. IPA 6,6%. Birra con un buon corpo, succosa con un amaro deciso. In bocca frutta gialla matura, agrumi e frutta tropicale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Hattori Hanzo 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Calix Niger 33cl<span class="price ">6</span></h3>
+                                    <p class="">Birrificio dei Castelli. Stout 6,7%. Color ebano scuro, schiuma compatta dai toni nocciola. Al naso elegante sentore di caffè e note di quercia.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Black Stout 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Brewmaster. Stout irlandese 4,2%. Stout dal gusto deciso, cremoso e delicato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="vino" data-magellan-target="vino">
     			<div class="small-12 cell">
