--- a/menu.html
+++ b/menu.html
@@ -572,7 +572,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Pilsner 50cl<span class="price ">6</span></h3>
-                                    <p class="">Birrificio Flensburger. Bionda tedesca amara 4,8%.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                    <p class="">Birrificio Flensburger. Pils tedesca 4,8%. Gusto amaro e profumo di malto e luppolo. Finale secco ed amaro che rinfresca il palato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -588,7 +588,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Blanche 33cl<span class="price ">5,5</span></h3>
-                                    <p class="">Birrificio Cornelissen. Birra bianca belga 5%. birra di frumento bianca non filtrata.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                    <p class="">Birrificio Cornelissen. Blanche Belga 5%. Birra di frumento bianca non filtrata. Il frumento conferisce alla birra un sapore leggermente amaro, il coriandolo un tocco piccante, la buccia di limone il fruttato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -627,8 +627,16 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Red Ale 50cl<span class="price ">6</span></h3>
+                                    <h3>Red Ale 50cl<span class="price ">6,5</span></h3>
                                     <p class="">Birrificio Brewmaster. Rossa irlandese 4,2%. Tratti molto decisi di malto e luppolo con un finale caramellato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Hattori Hanzo 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -643,14 +651,6 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Mazzu de Fiuri 50cl<span class="price ">6,5</span></h3>
-                                    <p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="cell">
-                            <div class="card">
-                                <div class="card-section">
                                     <h3>Variante IPA 50cl<span class="price ">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. IPA 6,6%. Birra con un buon corpo, succosa con un amaro deciso. In bocca frutta gialla matura, agrumi e frutta tropicale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
@@ -659,8 +659,8 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Hattori Hanzo 50cl<span class="price ">6,5</span></h3>
-                                    <p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                    <h3>Mazzu de Fiuri 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
