--- a/menu.html
+++ b/menu.html
@@ -588,7 +588,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Blanche 33cl<span class="price ">5,5</span></h3>
-                                    <p class="">Birrificio Cornelissen. Blanche Belga 5%. Birra di frumento bianca non filtrata. Il frumento conferisce alla birra un sapore leggermente amaro, il coriandolo un tocco piccante, la buccia di limone il fruttato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                    <p class="">Birrificio Cornelissen. Blanche Belga 5%. Il frumento conferisce alla birra un sapore leggermente amaro, il coriandolo un tocco piccante, la buccia di limone il fruttato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -817,50 +817,42 @@
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="liquore" data-magellan-target="liquore">
     			<div class="small-12 cell">
-    				<h2>Amari</h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Sibilla, Amaro dell&#x27;Erborista, Amaro del Capo, Sambuca Molinari, Fernet Branca, Brancamenta, Montenegro, Anima Nera<span class="price ">4</span></h3>
-    								<p class=""><span class="hide"><br><small>Allergeni: </small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Varnelli<span class="price ">3,5</span></h3>
-    								<p class=""><span class="hide"><br><small>Allergeni: </small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Grappa Bianca 903<span class="price ">3,5</span></h3>
-    								<p class=""><span class="hide"><br><small>Allergeni: </small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Grappa Barricata<span class="price ">4</span></h3>
-    								<p class=""><span class="hide"><br><small>Allergeni: </small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Vodka<span class="price ">4</span></h3>
-    								<p class="">Imperial Collection Gold<span class="hide"><br><small>Allergeni: </small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
+                    <h2>Amari</h2>
+                    <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Amari<span class="price ">4</span></h3>
+                                    <p class="">Sibilla, Amaro dell&#x27;Erborista, Varnelli, Amaro del Capo, Sambuca Molinari, Fernet Branca, Brancamenta, Montenegro, Anima Nera.<span class="hide"><br><small>Allergeni: </small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Grappa Bianca<span class="price ">3,5</span></h3>
+                                    <p class="">Bonaventura Maschio 903.<span class="hide"><br><small>Allergeni: </small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Grappa Barricata<span class="price ">4</span></h3>
+                                    <p class="">Pilzer Grappa invecchiata 3 anni.<span class="hide"><br><small>Allergeni: </small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Vodka<span class="price ">4</span></h3>
+                                    <p class="">Imperial Collection Gold.<span class="hide"><br><small>Allergeni: </small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     			<div class="small-12 cell">
     				<h2>Rhum</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
