--- a/menu.html
+++ b/menu.html
@@ -461,6 +461,14 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Succo alla Pesca<span class="price ">3,5</span></h3>
+                                    <p class="">Succo alla pesca. 200ml.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     				</div>
     			</div>
     		</section>
