--- a/asporto.html
+++ b/asporto.html
@@ -39,7 +39,7 @@
     <!-- End Facebook Pixel Code -->
 </head>
 <body>
-    <div id="loading"></div>
+    <div id="loading" hidden></div>
     <nav id="hamburgerNav">
     	<ul class="menu-hamburger">
     		<li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="assets/img/svgs/logo.svg" alt="Logo Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></li>
@@ -56,11 +56,10 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-                <!-- <p>Chiusi il lunedì e martedì.</p> -->
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" >
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell">
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-center extra-space">
     			    <div class="cell">
@@ -103,14 +102,14 @@
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" >
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;">
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
     				<!-- <li><a href="#pesce">Pesce</a></li> -->
     				<li><a href="#stuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
-    				<li><a href="#carne">Carne</a></li>
+    				<li><a href="#secondi">Secondi</a></li>
     				<li><a href="#dolce">Dolci</a></li>
     				<li><a href="#bevanda">Bevande</a></li>
     				<li><a href="#birra">Birra</a></li>
@@ -120,7 +119,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" >
+    	<div class="grid-container">
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="stuzzicare" data-magellan-target="stuzzicare">
@@ -132,12 +131,12 @@
     				</section>
     				<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
     					<div class="small-12 cell">
-    						<h2>Hamburger Classici<small>Serviti a cottura media e con patate fritte</small></h2>
+    						<h2>Hamburger <span style="display:none;">Classici</span><small>Serviti a cottura media e con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
     					<div class="small-12 cell">
-    						<h2>Hamburger di Stagione<small>Serviti a cottura media e con patate fritte</small></h2>
+    						<h2>Hamburger di Pesce<small>Serviti con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
@@ -147,9 +146,9 @@
     						</div>
     					</div>
     				</section>
-    				<section class="grid-x grid-margin-x grid-margin-y" id="carne" data-magellan-target="carne">
+    				<section class="grid-x grid-margin-x grid-margin-y" id="secondi" data-magellan-target="secondi">
     					<div class="small-12 cell">
-    						<h2>Carne</h2>
+    						<h2>Secondi</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
@@ -251,7 +250,8 @@
     							Vai al Checkout<span id="price-cart-large" class="price carrello-table-totale"> €&ensp;0</span>
     						</button>
     					</footer>
-    				</div>				<div id="carrelloVuoto">
+    				</div>
+    				<div id="carrelloVuoto">
     					<header class="main-header-carrello-large">
     						Il tuo Ordine
     					</header>
