--- a/menu.html
+++ b/menu.html
@@ -195,7 +195,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Carbonara_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Carbonara">
     								<h3>Carbonara<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-    								<p>Burger di manzo, guanciale, crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo, guanciale; crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -303,7 +303,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
     								<h3>Pollo Croccante<span class="price ">13,4</span></h3>
-    								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno, bacon croccante, cipolla in agrodolce, insalata e maionese.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
+    								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno, bacon croccante, cipolla in agrodolce, insalata, maionese.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -344,7 +344,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PesceSpada_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pesce Spada">
     								<h3>Pesce Spada<span class="price ">13,4</span></h3>
-    								<p>Burger di pesce spada, insalata, pomodoro fresco e salsa tartara.<span class=""><br><small>Allergeni: Glutine, Uova, Pesce, Latte, Sedano, Senape</small></span></p>
+    								<p>Burger di pesce spada, insalata, pomodoro fresco, salsa tartara.<span class=""><br><small>Allergeni: Glutine, Uova, Pesce, Latte, Sedano, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -367,7 +367,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/VegetarianoMediterraneo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Mediterraneo">
     								<h3>Vegetariano Mediterraneo<span class="price ">12,9</span></h3>
-    								<p>Burger di verdure (zucchine, peperoni, pomodori secchi, cipolle, melanzane), insalata, cipolla in agrodolce e maionese vegana.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano</small></span></p>
+    								<p>Burger di verdure (zucchine, peperoni, pomodori secchi, cipolle, melanzane), insalata, cipolla in agrodolce, maionese vegana.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano</small></span></p>
     							</div>
     						</div>
     					</div>
