--- a/menu.html
+++ b/menu.html
@@ -298,7 +298,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
@@ -306,7 +306,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno, bacon croccante, cipolla in agrodolce, insalata, maionese.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -330,7 +330,7 @@
     			<div class="small-12 cell">
     				<h2>Hamburger di Pesce<small>Serviti con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Salmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Salmone">
@@ -338,7 +338,7 @@
     								<p>Burger di salmone, cipolla caramellata, rucola, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Pesce, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -405,7 +405,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CotolettadiPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cotoletta di Pollo">
@@ -413,7 +413,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno. Servita con patate fritte.<span class=""><br><small>Allergeni: Glutine, Soia</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
