--- a/asporto.html
+++ b/asporto.html
@@ -187,7 +187,7 @@
     						<h2 style="margin-top:0rem;">Note Importanti</h2>
     						<p>Tutti i prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche.</p>
     						<p>Il pesce destinato ad essere consumato crudo o parzialmente crudo è sottoposto a trattamento di bonifica preventiva conforme alle prescrizioni del Reg. CE / 2004, all. III, sez. VIII, cap. 3, lettera D, punto 3.</p>
-    						<p>Durante la preparazione del cibo non si possono escludere contaminazioni crociate.</p>
+    						<p>Durante la preparazione e/o la cottura del cibo non si possono escludere contaminazioni crociate.</p>
     					</div>
     				</section>
     				<div class="grid-x hide-for-large" data-sticky data-stick-to="bottom" data-sticky-on="small" data-options="marginBottom:0;" data-top-anchor="ecommerce-button-top" data-btm-anchor="ecommerce-button-bottom">
