--- a/menu.html
+++ b/menu.html
@@ -330,15 +330,15 @@
     			<div class="small-12 cell">
     				<h2>Hamburger di Pesce<small>Serviti con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Salmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Salmone">
-    								<h3>Salmone<span class="price ">13,4</span></h3>
-    								<p>Burger di salmone, cipolla caramellata, rucola, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Pesce, Latte</small></span></p>
+    								<h3>Salmone<span class="price ">13,9</span></h3>
+    								<p>Burger di salmone, stracciatella, chips di topinambur.<span class=""><br><small>Allergeni: Glutine, Uova, Pesce, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
