--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
+                    <p>Chiusi il 23-24-25 dicembre.</p>
+                    <p>Aperti il 26-27-28-29-30 Dicembre.</p>
+                    <p><strong>31 Dicembre</strong> aperti per aperitivo e asporti dalle 18:00 alle 21:00.</p>
+                    <p>Chiusi il 1 Gennaio.</p>
+                    <p>Aperti il 2-3-4-5-6 Gennaio.</p>
     			</div>
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
