--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
-                    <h2>Orari delle festività</h2>
+                    <div class="callout primary">
+                    <h2>Orari Apertura Festività</h2>
                     <p>23-24-25 Dicembre: Chiusi</p>
                     <p>26-27-28-29-30 Dicembre: 19 - 22</p>
                     <p><strong>31 Dicembre (solo aperitivo e asporti): </strong>18 - 21</p>
                     <p>1 Gennaio: Chiusi</p>
                     <p>2-3-4-5-6 Gennaio: 19 - 22</p>
+                    </div>
     			</div>
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
