--- a/asporto.html
+++ b/asporto.html
@@ -57,15 +57,10 @@
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
                 <!-- <p>Chiusi il lunedì e martedì.</p> -->
-                <p>Chiusi il 23-24-25 dicembre.</p>
-                    <p>Aperti il 26-27-28-29-30 Dicembre.</p>
-                    <p><strong>31 Dicembre</strong> aperti per aperitivo e asporti dalle 18:00 alle 21:00.</p>
-                    <p>Chiusi il 1 Gennaio.</p>
-                    <p>Aperti il 2-3-4-5-6 Gennaio.</p>
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" hidden>
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" >
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-center extra-space">
     			    <div class="cell">
@@ -108,7 +103,7 @@
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" hidden>
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" >
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
@@ -124,7 +119,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" hidden>
+    	<div class="grid-container" >
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="stuzzicare" data-magellan-target="stuzzicare">
