--- a/menu.html
+++ b/menu.html
@@ -298,7 +298,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
@@ -306,7 +306,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno, bacon croccante, cipolla in agrodolce, insalata, maionese.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -405,7 +405,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CotolettadiPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cotoletta di Pollo">
@@ -413,7 +413,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno. Servita con patate fritte.<span class=""><br><small>Allergeni: Glutine, Soia</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
