--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     				<h1 class="first-paragraph">Orari</h1>
                     <div class="callout primary">
                         <h2>Orari Festività</h2>
-                        <p>26-27-28-29-30 Dicembre: Aperti dalle 19 alle 22</p>
+                        <p>29-30 Dicembre: Aperti dalle 19 alle 22</p>
                         <p><strong>31 Dicembre (solo aperitivo e asporti): </strong>Aperti dalle 18 alle 21</p>
                         <p>1 Gennaio: Chiusi</p>
                         <p>2-3-4-5-6 Gennaio: Aperti dalle 19 alle 22</p>
