--- a/asporto.html
+++ b/asporto.html
@@ -57,7 +57,7 @@
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
                 <!-- <p>Chiusi il lunedì e martedì.</p> -->
-                <p>31 dicembre: si accettano ordini entro le 20:30, ritiro entro le 21:00.</p>
+                <p><strong>31 dicembre: si accettano ordini fino alle 20:30, ritiro entro le 21:00.</strong></p>
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
@@ -88,7 +88,7 @@
     			    <div class="cell">
     			        <button type="button" class="button orario-btn">20:45</button>
     			    </div>
-    			    <!-- <div class="cell">
+    			    <div class="cell">
     			        <button type="button" class="button orario-btn">21:00</button>
     			    </div>
     			    <div class="cell">
@@ -99,7 +99,7 @@
     			    </div>
     			    <div class="cell">
     			        <button type="button" class="button orario-btn">21:45</button>
-    			    </div> -->
+    			    </div>
     			</div>
     		</div>
     	</div>
