--- a/menu.html
+++ b/menu.html
@@ -98,7 +98,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/OliveallAscolana_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Olive all&#x27;Ascolana">
-                                    <h3>Aperitivo slider<span class="price ">15</span></h3>
+                                    <h3>Aperitivo Slider<span class="price ">15</span></h3>
                                     <p>3 slider da 50 grammi ciascuno scelti dal cuoco. Scelta fra: calice di vino, birra artigianale media o Spritz.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano, Senape, Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
