--- a/menu.html
+++ b/menu.html
@@ -82,7 +82,7 @@
     <div id="menupage-text">
     	<div class="grid-container">
             <section class="grid-x grid-margin-x grid-margin-y" id="aperitivo" data-magellan-target="aperitivo">
-                <div class="small-12 cell">
+                <div class="small-12 cell callout secondary">
                     <h2>Aperitivo</h2>
                     <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
                         <div class="cell">
