--- a/menu.html
+++ b/menu.html
@@ -88,18 +88,24 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <img src="assets/img/prod/BocconcinidiPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Bocconcini di Pollo">
                                     <h3>Aperitivo di Fritti<span class="price ">15</span></h3>
-                                    <p>4 olive all'ascolana, 4 bocconcini di pollo, 4 falafel, cipolle in tempura. Scelta fra: calice di vino, birra artigianale media o Spritz.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Crostacei, Sedano, Senape, Anidride solforosa e solfiti</small></span></p>
+                                    <ul class="bullet">
+                                        <li>4 olive all'ascolana, 4 bocconcini di pollo, 4 falafel, cipolle in tempura.</li>
+                                        <li>Scelta fra: calice di vino, birra artigianale media o spritz.</li>
+                                    </ul>
+                                    <p><small>Allergeni: Glutine, Uova, Latte, Crostacei, Sedano, Senape, Anidride solforosa e solfiti</small></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <img src="assets/img/prod/OliveallAscolana_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Olive all&#x27;Ascolana">
                                     <h3>Aperitivo Slider<span class="price ">15</span></h3>
-                                    <p>3 slider da 50 grammi ciascuno scelti dal cuoco. Scelta fra: calice di vino, birra artigianale media o Spritz.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano, Senape, Anidride solforosa e solfiti</small></span></p>
+                                    <ul class="bullet">
+                                        <li>3 slider da 50 grammi ciascuno selezionati dal cuoco.</li>
+                                        <li>Scelta fra: calice di vino, birra artigianale media o spritz.</li>
+                                    </ul>
+                                    <p><small>Allergeni: Glutine, Uova, Latte, Crostacei, Sedano, Senape, Anidride solforosa e solfiti</small></p>
                                 </div>
                             </div>
                         </div>
