--- a/asporto.html
+++ b/asporto.html
@@ -57,6 +57,7 @@
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
                 <!-- <p>Chiusi il lunedì e martedì.</p> -->
+                <p>1 Gennaio chiusi</p>
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
