--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
                     <div class="callout primary">
+                        <h2>Orari Festività</h2>
                         <p>2-3-4-5-6 Gennaio: Aperti dalle 19 alle 22</p>
                     </div>
     			</div>
