--- a/menu.html
+++ b/menu.html
@@ -125,6 +125,15 @@
     							</div>
     						</div>
     					</div> -->
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/MozzarellediBufalaPanate_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Mozzarelle di Bufala Panate">
+                                    <h3>Mozzarelle di Bufala Panate<span class="price ">6,5</span></h3>
+                                    <p>Bocconcini di mozzarella di bufala panati e fritti (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
