--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     				<h1 class="first-paragraph">Orari</h1>
                     <div class="callout primary">
                         <h2>Orari Festività</h2>
-                        <p>5-6 Gennaio: Aperti dalle 19 alle 22</p>
+                        <p>5-6 Gennaio: aperti dalle 19 alle 22</p>
                     </div>
     			</div>
     		</div>
