--- a/menu.html
+++ b/menu.html
@@ -125,7 +125,7 @@
     							</div>
     						</div>
     					</div>
-                        <!-- <div class="cell">
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/MozzarellediBufalaPanate_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Mozzarelle di Bufala Panate">
@@ -133,7 +133,7 @@
                                     <p>Bocconcini di mozzarella di bufala panati e fritti (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -152,7 +152,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/TriangolidiVerdure_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Triangoli di Verdure">
@@ -160,7 +160,7 @@
     								<p>Carote, peperoni, piselli, mais e cipolle avvolte da una croccante panatura dorata. Serviti con salsa aioli (6 pezzi).<span class=""><br><small>Allergeni: Glutine, Sedano, Senape</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -170,7 +170,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Peperoncini Piccanti">
@@ -178,7 +178,7 @@
     								<p>Peperoncini piccanti ripieni di robiola e avvolti in pancetta. Serviti con pane e coleslaw.<span class=""><br><small>Allergeni: Latte, Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
