--- a/menu.html
+++ b/menu.html
@@ -507,7 +507,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Whoop_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Whoop">
@@ -516,7 +516,7 @@
     							</div>
     						</div>
     					</div>
-    				</div> -->
+    				</div>
     			</div>
     		</section>
     <!-- inizio layout no immagini -->
