--- a/menu.html
+++ b/menu.html
@@ -743,14 +743,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -759,14 +759,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Variante IPA 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. IPA 6,6%. Birra con un buon corpo, succosa con un amaro deciso. In bocca frutta gialla matura, agrumi e frutta tropicale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
