--- a/asporto.html
+++ b/asporto.html
@@ -119,7 +119,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" >
+    	<div class="grid-container" hidden>
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="stuzzicare" data-magellan-target="stuzzicare">
